Adding Tests to allow bump version